--- a/package.json
+++ b/package.json
@@ -1,36 +1,67 @@
 {
-  "name": "film-nerd",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/jest": "24.0.21",
-    "@types/node": "12.12.3",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.3",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
-    "typescript": "3.6.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "film-nerd",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@types/jest": "24.0.21",
+        "@types/node": "12.12.3",
+        "@types/react": "16.9.11",
+        "@types/react-dom": "16.9.3",
+        "apollo-boost": "^0.4.4",
+        "eslint-plugin-react": "^7.16.0",
+        "graphql": "^14.5.8",
+        "graphql-tag": "^2.10.1",
+        "react": "^16.11.0",
+        "react-apollo": "^3.1.3",
+        "react-apollo-hooks": "^0.5.0",
+        "react-dom": "^16.11.0",
+        "react-scripts": "3.2.0",
+        "styled-components": "^4.4.1",
+        "typescript": "3.6.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "codegen": "graphql-codegen --config codegen.yml",
+        "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "tsc --noEmit && lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{js,ts,tsx}": [
+            "eslint . --fix",
+            "git add"
+        ]
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@graphql-codegen/cli": "^1.8.2",
+        "@graphql-codegen/typescript": "1.8.2",
+        "@graphql-codegen/typescript-operations": "1.8.2",
+        "@graphql-codegen/typescript-react-apollo": "1.8.2",
+        "@typescript-eslint/eslint-plugin": "^2.6.0",
+        "@typescript-eslint/parser": "^2.6.0",
+        "eslint": "^6.6.0",
+        "eslint-config-prettier": "^6.5.0",
+        "eslint-plugin-prettier": "^3.1.1",
+        "prettier": "^1.18.2"
+    }
 }
