--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
         "@types/node": "12.12.3",
         "@types/react": "16.9.11",
         "@types/react-dom": "16.9.3",
+        "@types/react-router-dom": "^5.1.1",
         "apollo-boost": "^0.4.4",
         "eslint-plugin-react": "^7.16.0",
         "graphql": "^14.5.8",
@@ -16,6 +17,7 @@
         "react-apollo": "^3.1.3",
         "react-apollo-hooks": "^0.5.0",
         "react-dom": "^16.11.0",
+        "react-router-dom": "^5.1.2",
         "react-scripts": "3.2.0",
         "styled-components": "^4.4.1",
         "typescript": "3.6.4"
