--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@types/compression": "^1.0.1",
         "@types/express": "^4.17.1",
+        "@types/faker": "^4.1.7",
         "@types/graphql": "^14.5.0",
         "@types/graphql-depth-limit": "^1.1.2",
         "@types/node": "^12.12.3",
@@ -28,6 +29,7 @@
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "faker": "^4.1.0",
         "graphql": "^14.5.8",
         "graphql-depth-limit": "^1.1.0",
         "graphql-import": "^0.7.1",
