--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,10 @@
         "@types/faker": "^4.1.7",
         "@types/graphql": "^14.5.0",
         "@types/graphql-depth-limit": "^1.1.2",
+        "@types/ioredis": "^4.0.18",
         "@types/node": "^12.12.3",
+        "apollo-datasource-rest": "^0.6.6",
+        "apollo-server-cache-redis": "^1.1.4",
         "apollo-server-express": "^2.9.7",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
