--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@apollo/react-hooks": "^3.1.3",
         "@babel/preset-react": "^7.6.3",
         "@types/jest": "24.0.21",
         "@types/node": "12.12.3",
