--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,10 @@
         "start": "node 'dist/server.js'",
         "build": "tsc -p . && ncp src/schema dist/schema",
         "start:dev": "npm run build:dev",
+        "dev": "yarn start:dev",
         "build:dev": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql",
-        "test": "jest"
+        "test": "jest",
+        "generate:types": "graphql-codegen"
     },
     "keywords": [],
     "author": "Nevyana Angelova",
@@ -19,6 +21,10 @@
         ]
     },
     "dependencies": {
+        "@graphql-codegen/cli": "^1.8.3",
+        "@graphql-codegen/typescript": "^1.8.3",
+        "@graphql-codegen/typescript-operations": "^1.8.3",
+        "@graphql-codegen/typescript-resolvers": "^1.8.3",
         "@types/compression": "^1.0.1",
         "@types/express": "^4.17.1",
         "@types/faker": "^4.1.7",
@@ -42,6 +48,7 @@
         "ncp": "^2.0.0",
         "nodemon": "^1.19.4",
         "ts-node": "^8.4.1",
-        "typescript": "^3.6.4"
+        "typescript": "^3.6.4",
+        "wikijs": "^6.0.1"
     }
 }
