--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
         "@types/react": "16.9.11",
         "@types/react-dom": "16.9.3",
         "@types/react-router-dom": "^5.1.1",
+        "apollo": "^2.21.0",
         "apollo-boost": "^0.4.4",
         "eslint-plugin-react": "^7.16.0",
         "graphql": "^14.5.8",
         "graphql-tag": "^2.10.1",
+        "graphql.macro": "^1.4.2",
         "react": "^16.11.0",
         "react-apollo": "^3.1.3",
         "react-apollo-hooks": "^0.5.0",
@@ -28,7 +30,8 @@
         "build": "react-scripts build",
         "test": "jest",
         "codegen": "graphql-codegen --config codegen.yml",
-        "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+        "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+        "generate:types": "apollo client:codegen types --target typescript --globalTypesFile=src/types/global.ts"
     },
     "husky": {
         "hooks": {
