--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,8 @@
         "@graphql-codegen/typescript": "^1.8.3",
         "@graphql-codegen/typescript-operations": "^1.8.3",
         "@graphql-codegen/typescript-resolvers": "^1.8.3",
+        "@types/btoa": "^1.2.3",
+        "@types/cheerio": "^0.22.16",
         "@types/compression": "^1.0.1",
         "@types/express": "^4.17.1",
         "@types/faker": "^4.1.7",
@@ -32,9 +34,12 @@
         "@types/graphql-depth-limit": "^1.1.2",
         "@types/ioredis": "^4.0.18",
         "@types/node": "^12.12.3",
+        "@types/node-fetch": "^2.5.4",
         "apollo-datasource-rest": "^0.6.6",
         "apollo-server-cache-redis": "^1.1.4",
         "apollo-server-express": "^2.9.7",
+        "btoa": "^1.2.1",
+        "cheerio": "^1.0.0-rc.3",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "express": "^4.17.1",
@@ -46,6 +51,7 @@
         "http": "^0.0.0",
         "jest": "^24.9.0",
         "ncp": "^2.0.0",
+        "node-fetch": "^2.6.0",
         "nodemon": "^1.19.4",
         "ts-node": "^8.4.1",
         "typescript": "^3.6.4",
